:fix: FIX overflow css bug

--- a/src/styles/components/_gistMarkup.scss
+++ b/src/styles/components/_gistMarkup.scss
@@ -123,6 +123,7 @@ article {
 		border-radius: 0.5em;
 		line-height: 1.5em;
 		display: inline-block;
+		word-break: break-all;
 
 		&::selection {
 			color: $dark;
